# polymarket-orderbook-substreams

./: .gitignore  Cargo.toml  README.md  build.rs  clickhouse-schema.sql  schema.sql  substreams.yaml
abis/: neg_risk_exchange.json
proto/: orderbook.proto
proto/polymarket/orderbook/v1/: orderbook.proto
src/: lib.rs  utils.rs
src/abi/: mod.rs
